<resources>
    <string name="app_name">RealAndroidFinalProject</string>
    <string name="Title_young_sam">The Young Samaritans \nVolunteer Manager</string>
    <string name="login_text">Login</string>
    <string name="enter_username_text">Enter your username</string>
    <string name="enter_password_text">Enter your password</string>
    <string name="reset_button_text">RESET</string>
    <string name="login_button_text">LOGIN</string>
    <string name="young_samaritans_logo_descp">Young Samaritans Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="events">Upcoming Events: </string>
    <string name="current_volunteer_hours">Current Hours:</string>
    <string name="events_attended">Events Attended:</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="hour_number">***hour number***</string>
    <string name="clear">CLEAR</string>
    <string name="volunteer_manager">Volunteer Manager</string>
    <string name="user_s_stats">User\'s Information:</string>
    <string name="your_events">My Events: </string>
    <string name="signed_up">Signed Up:</string>
    <string name="left_arrow"><![CDATA[<-]]></string>
    <string name="right_arrow"><![CDATA[->]]></string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thur">THUR</string>
    <string name="wed">WED</string>
    <string name="tues">TUES</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="november_2023">November 2023</string>
    <string name="sign_up_here">Sign Up Here:</string>
    <string name="event">Event</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="hours_table">Hours</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="upcoming_eventsL">Upcoming Events:</string>
    <string name="manage_volunteers">Manage Volunteers</string>
    <string name="volunteers">Volunteers: </string>
    <string name="add_event">Add Event</string>
    <string name="remove_event">Remove Event</string>
    <string name="past_events">Past Events:</string>
    <string name="manage_events">Manage Events</string>
    <string name="remove_volunteer">Remove Volunteer</string>
    <string name="add_volunteer">Add Volunteer</string>
    <string name="event_">Event:</string>
    <string name="date_">Date:</string>
    <string name="time_">Time:</string>
    <string name="location_">Location:</string>
    <string name="hours_">Hours:</string>
    <string name="hours">Hours</string>
    <string name="past_events_">Past Events:</string>
    <string name="signed_up_for_">Signed Up For:</string>
    <string name="volunteer_hours_">Volunteer Hours:</string>
    <string name="username_">Username:</string>
    <string name="take_photo">Take Photo</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="this_action_is_not_reversible">THIS ACTION IS NOT REVERSIBLE*</string>
    <string name="select_the_volunteer_you_would_like_to_remove">Select the volunteer you would like to REMOVE</string>
    <string name="select_the_event_you_would_like_to_remove">Select the event you would like to REMOVE</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_hours">Enter Hours</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_date_yyyy_mm_dd">Enter Date (YYYY-MM-DD)</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="i_m_in">I\'m In!</string>
    <string name="user_s_information">User\'s Information</string>
    <string name="enter_name_for_photo">Enter name for photo</string>
    <string name="enter_the_name_you_would_like_to_call_the_next_photo_you_take">Enter the name you would like to call the next photo you take.</string>
    <string name="this_photo_will_be_stored_in_the_linked_firebasestorage_for_use_later">This photo will be stored in the linked FirebaseStorage for use later!</string>

</resources>