<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/select_the_volunteer_you_would_like_to_remove"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/main_red"
        android:textStyle="bold"
        android:text="@string/this_action_is_not_reversible"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@color/main_red"
            android:text="@string/cancel"
            android:fontFamily="sans-serif-condensed"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/proceedBtn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@color/main_red"
            android:text="@string/proceed"
            android:fontFamily="sans-serif-condensed"/>

    </LinearLayout>
</LinearLayout>