<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="200dp"
    android:gravity="center"
    android:background="@drawable/rectangle_border">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/enterNewVolunteersUN"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"/>

        <Space
            android:layout_height="10dp"
            android:layout_width="match_parent"/>

        <EditText
            android:id="@+id/enterNewVolunteersPW"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"/>

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent"/>

        <Button
            android:id="@+id/dialog_add_volunteer_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/add_volunteer"
            android:fontFamily="sans-serif-condensed"
            android:background="@color/main_red"
            android:textColor="@color/white"/>

    </LinearLayout>
</RelativeLayout>