

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_border"
    android:layout_gravity="center_vertical">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="#ECECEC"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false">

        <TextView
            android:text="@string/event_"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="8dp" />
        <TextView
            android:id="@+id/dialog_event_text"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:padding="8dp" />
        <TextView
            android:text="@string/date_"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="8dp" />
        <TextView
            android:id="@+id/dialog_date_text"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="8dp" />
        <TextView
            android:text="@string/time_"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:padding="8dp" />
        <TextView
            android:id="@+id/dialog_time_text"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:padding="8dp" />
        <TextView
            android:text="@string/location_"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:padding="8dp" />
        <TextView
            android:id="@+id/dialog_location_text"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:padding="8dp" />
        <TextView
            android:text="@string/hours_"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:padding="8dp" />
        <TextView
            android:id="@+id/dialog_hours_text"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:padding="8dp" />

    </GridLayout>
</FrameLayout>
